# just.remind.me

./: .gitignore  .hgignore  buildconf.py  make
doc/: dependencies.md
meson/: get_sources.sh  make.py  meson.build  settings.py
src/engine/: application.cpp  application.h  macros.h  types.h
src/runner/: main.cpp
waf/: assist.py  buildconf.py  make.py  settings.py  starter.py  utils.py  wscript
